--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
 
 <p>
 
-ABACUS IS AN OPEN-SOURCE, PAPER-BASED<br>
-VOTING SYSTEM DESIGNED TO GIVE VOTERS<br>
-CONFIDENCE THAT EVERY VOTE COUNTS.&nbsp&nbsp&nbsp<br>
+
+  Abacus is an open-source,&nbsp<br> 
+  paper-based system to let&nbsp<br>
+  voters confirm that their&nbsp<br>
+  votes are counted as cast.<br>
+
 
 </p>
 
