--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <link rel='stylesheet' type='text/css' href='stylesheet.css'>
 </head>
 
-<img src = "resources/images/abacus_logo.png", width = "150px"></img>
+<img src = "resources/images/abacus_logo.png", width = 30%></img>
 <div style = "background: #EEE">
 <h3><i>COUNT ON US</i></h3>
 
@@ -13,7 +13,7 @@
 <p>
 
 
-  Abacus is an open-source,&nbsp<br> 
+  Abacus is an open-source,&nbsp<br>
   paper-based system to let&nbsp<br>
   voters confirm that their&nbsp<br>
   votes are counted as cast.<br>
@@ -25,7 +25,9 @@
 READ
 </h3>
 <p>
-  <a href = "resources/A RECIPE FOR TRUSTWORTHY VOTING.pdf" download> A RECIPE FOR TRUSTWORTHY VOTING.pdf</a>
+  <a href = "resources/A RECIPE FOR TRUSTWORTHY VOTING.pdf" download>A RECIPE FOR TRUSTWORTHY VOTING<br>( ⤋ .pdf )</a>
+
+</a>
 </p>
 
 
@@ -46,14 +48,10 @@ CONTACT
 <p>
 hi@abacusvoting.com
 </p>
-<p>
-2081 Center Street<br>
-Berkeley, CA 94704
-</p>
 
 <h3>&nbsp</h3>
 </div>
 
-<img style = "max-width: 20%;" src = "resources/images/copyright.png", width = "150px"></img>
+<img src = "resources/images/copyright.png", width = 30%></img>
 
 </html>
