--- a/citizendylan.github.io/index.html
+++ b/citizendylan.github.io/index.html
@@ -3,7 +3,7 @@
 <link rel='stylesheet' type='text/css' href='stylesheet.css'>
 </head>
 
-<img src = "resources/images/abacus_logo.png", width = 30%></img>
+<img src = "resources/images/abacus_logo.png", width = 20%></img>
 <div style = "background: #EEE">
 <h3><i>COUNT ON US</i></h3>
 
@@ -25,7 +25,7 @@
 READ
 </h3>
 <p>
-  <a href = "resources/A RECIPE FOR TRUSTWORTHY VOTING.pdf" download>A RECIPE FOR TRUSTWORTHY VOTING<br>( ⤋ .pdf )</a>
+  <a href = "resources/A RECIPE FOR TRUSTWORTHY VOTING.pdf" download>⤋ A RECIPE FOR TRUSTWORTHY VOTING.pdf</a>
 
 </a>
 </p>
@@ -52,6 +52,6 @@ hi@abacusvoting.com
 <h3>&nbsp</h3>
 </div>
 
-<img src = "resources/images/copyright.png", width = 30%></img>
+<img src = "resources/images/copyright.png", width = 20%></img>
 
 </html>
