--- a/citizendylan.github.io/demo.html
+++ b/citizendylan.github.io/demo.html
@@ -38,13 +38,13 @@ for a group of voters.&nbsp<br>
 <textarea id = 'candidates' rows = 10;></textarea>
 
 
-<h3 class = 'question'>COLUMNS</h3>
+<h3 class = 'question'>COLUMN LABELS</h3>
 
 <p>Create your own column headers.
 <br>(maximum 3 characters per header)</p>
 
 <input id='columns' value = '0 1 2 3 4' class = 'ti' style = "text-align:center">
-<p>Copy/paste from the input column <br>to implement a particular method.</p>
+<p>Copy/paste from the table below <br>to implement a particular method.</p>
 <table>
     <tr>
       <th>Method</th>
@@ -87,7 +87,7 @@ yes
 <p>Download the coded ballots <br> and the database of codes.</p>
 
 <button style = 'border-radius: 10px' onclick = 'print_ballot()'>
- ⤋ ballot.pdf
+ballots.pdf
 </button>
 
 <h3>&nbsp</h3>
@@ -98,9 +98,7 @@ yes
 </html>
 
 
-<script src='https://unpkg.com/jspdf@latest/dist/jspdf.min.js'></script>
-<!--<script type='text/javascript' src='jspdf153.min.js'> </script>-->
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.min.js"></script>
 
 <script type='text/javascript'>
 
@@ -119,7 +117,7 @@ document.getElementById('instructions').value =
       var instructions = document.getElementById('instructions').value;
       var n_ballots = document.getElementById('n_ballots').value;
       var rando = document.getElementById('rando').checked;
-      var copyright = "© 2020 Abacus Voting"
+      var copyright = "© 2021 Abacus Voting"
 
       var ballot_codes = make_codes(n_ballots, 16);
       var ownership_codes = make_codes(n_ballots, 16);
@@ -168,7 +166,7 @@ document.getElementById('instructions').value =
         doc.text(pw/2, 1, 'INSTRUCTIONS', align = 'center');
         doc.setFontSize(16);
         var insplit = doc.splitTextToSize(instructions, 6.5);
-        doc.text(1,2, insplit, align = 'left');
+        doc.text(1,2, insplit);
 
         doc.setLineWidth(.02);
         doc.line(1, 7.33, (pw-margin), 7.33);
