--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
 </head>
 
 <img src = "resources/images/abacus_logo.png", width = 20%></img>
+
+<p> You can count on us!</p>
+
 <div style = "background: #EEE">
-<h3>YOU CAN COUNT ON US</h3>
+
+  <h3>
+  MAKE A BALLOT
+  </h3>
+  <p>
+    <a href = "demo.html"> Print some ballots.</a>
+  </p>
+
+
+
+<h3>ABOUT</h3>
 
 <p style="text-align:left; margin: 5%;">
 Abacus is an <a href = "https://github.com/citizendylan/citizendylan.github.io"> open-source </a> voting system.
@@ -15,22 +28,19 @@ It enables:
 </p>
 
 <p style="text-align:left; margin: 2%;">
-  &#x2713; paper ballots and a paper database <br>
-  &#x2713; optional voter codes to confirm ballots <br>
-  &#x2713; multiple voting methods:<br>
-</p>
+  &#x2713; paper voting <br>
+  &#x2713; voter codes to confirm ballots <br>
+  &#x2713; multiple voting methods, including:<br>
   <a href = "https://en.wikipedia.org/wiki/First-past-the-post_voting"> conventional</a>,
   <a href = "https://en.wikipedia.org/wiki/Ranked_voting">ranked</a>, or
   <a href = "https://en.wikipedia.org/wiki/Cardinal_voting"> score</a> voting <br>
+</p>
 
 
 
 
 
-<h3>
-READ
-</h3>
-<p>
+<p style="text-align:left; margin: 5%;">
   Download our white paper:
 </p>
 <p>
@@ -40,26 +50,34 @@ READ
 </p>
 
 
-<h3>
-CREATE
-</h3>
-<p>
-  Lay out a simple paper ballot.
-</p>
-<p>
-  <a href = "demo.html">BALLOT MAKER</a>
-</p>
-<p>
-  (Free for educational or personal use!)
-</p>
+
 
 <h3>
 CONTACT
 </h3>
 
-<p>
-hi@abacusvoting.com
+<p style="text-align:left; margin: 2%;">
+Need help?
 </p>
+
+<p style="text-align:left; margin: 2%;">
+License Abacus for non-educational use.
+</p>
+
+<p style="text-align:left; margin: 2%;">
+Share your story of how you use Abacus.
+</p>
+
+
+<p style="text-align:left; margin: 2%;">
+Say hi!
+</p>
+
+
+<address>
+ <a href="mailto:hi@abacusvoting.com">hi@abacusvoting.com</a>
+</address>
+
 
 <h3>&nbsp</h3>
 </div>
