--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 <div style = "background: #EEE">
 
   <h3>
-  MAKE A BALLOT
-  </h3>
+RUN AN ELECTION  </h3>
   <p>
-    <a href = "demo.html"> Print some ballots.</a>
+    <a href = "demo.html"> MAKE SOME BALLOTS</a>
   </p>
 
 
@@ -29,7 +28,7 @@ It enables:
 
 <p style="text-align:left; margin: 2%;">
   &#x2713; paper voting <br>
-  &#x2713; voter codes to confirm ballots <br>
+  &#x2713; codes to confirm ballots <br>
   &#x2713; multiple voting methods, including:<br>
   <a href = "https://en.wikipedia.org/wiki/First-past-the-post_voting"> conventional</a>,
   <a href = "https://en.wikipedia.org/wiki/Ranked_voting">ranked</a>, or
